k8s/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  selfLink: /api/v1/namespaces/web
